plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.16'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'jacoco'
}

group = 'com.pragma'
version = '1.8.0'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

ext {
	mapstructVersion = '1.6.3'
	springdocVersion = '2.8.17'
	jacocoVersion = '0.8.14'
	jacksonBomVersion = '2.21.5'
	lombokVersion = '1.18.46'
	lombokMapstructBindingVersion = '0.2.0'
}

repositories {
	mavenCentral()
}

dependencyManagement {
	imports {
		mavenBom "com.fasterxml.jackson:jackson-bom:${jacksonBomVersion}"
	}
}

dependencies {

	// ==========================================
	// WEBFLUX
	// ==========================================
	implementation 'org.springframework.boot:spring-boot-starter-webflux'

	// ==========================================
	// VALIDATION
	// ==========================================
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// ==========================================
	// R2DBC
	// ==========================================
	implementation 'org.springframework.boot:spring-boot-starter-data-r2dbc'

	// ==========================================
	// POSTGRESQL
	// ==========================================
	implementation 'org.postgresql:r2dbc-postgresql'

	// ==========================================
	// REDIS
	// ==========================================
	implementation 'org.springframework.boot:spring-boot-starter-data-redis-reactive'

	// ==========================================
	// MAPSTRUCT
	// ==========================================
	implementation "org.mapstruct:mapstruct:${mapstructVersion}"
	annotationProcessor "org.mapstruct:mapstruct-processor:${mapstructVersion}"

	// ==========================================
	// SWAGGER / OPENAPI
	// ==========================================
	implementation("org.springdoc:springdoc-openapi-starter-webflux-ui:${springdocVersion}") {
		exclude group: 'org.apache.commons', module: 'commons-lang3'
	}

	implementation 'org.apache.commons:commons-lang3:3.18.0'

	// ==========================================
	// LOMBOK
	// ==========================================
	compileOnly "org.projectlombok:lombok:${lombokVersion}"
	annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
	annotationProcessor "org.projectlombok:lombok-mapstruct-binding:${lombokMapstructBindingVersion}"

	testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
	testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"

	// ==========================================
	// TEST
	// ==========================================
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'io.projectreactor:reactor-test'
	testImplementation 'com.squareup.okhttp3:mockwebserver:4.12.0'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
	finalizedBy tasks.named('jacocoTestReport')
}

tasks.withType(JavaCompile).configureEach {
	options.compilerArgs += ['-parameters']
}

jacoco {
	toolVersion = jacocoVersion
}

// ==========================================
// JACOCO REPORT
// ==========================================

jacocoTestReport {
	dependsOn test

	reports {
		xml.required = true
		html.required = true
		csv.required = false
	}

	classDirectories.setFrom(
			files(classDirectories.files.collect {
				fileTree(dir: it, exclude: [
						'com/pragma/order_service/OrderServiceApplication*',
						'com/pragma/order_service/application/dto/**',
						'com/pragma/order_service/application/mapper/**',
						'com/pragma/order_service/domain/model/**',
						'com/pragma/order_service/domain/port/**',
						'com/pragma/order_service/infrastructure/output/postgres/entity/**',
						'com/pragma/order_service/infrastructure/output/postgres/repository/**',
						'com/pragma/order_service/infrastructure/output/postgres/mapper/**',
						'com/pragma/order_service/infrastructure/output/webclient/mapper/**'
				])
			})
	)
}

// ==========================================
// JACOCO COVERAGE VERIFICATION
// ==========================================

jacocoTestCoverageVerification {
	dependsOn test

	violationRules {
		rule {
			limit {
				counter = 'LINE'
				value = 'COVEREDRATIO'
				minimum = 0.95
			}
		}
	}

	classDirectories.setFrom(
			files(classDirectories.files.collect {
				fileTree(dir: it, exclude: [
						'com/pragma/order_service/OrderServiceApplication*',
						'com/pragma/order_service/application/dto/**',
						'com/pragma/order_service/application/mapper/**',
						'com/pragma/order_service/domain/model/**',
						'com/pragma/order_service/domain/port/**',
						'com/pragma/order_service/infrastructure/output/postgres/entity/**',
						'com/pragma/order_service/infrastructure/output/postgres/repository/**',
						'com/pragma/order_service/infrastructure/output/postgres/mapper/**',
						'com/pragma/order_service/infrastructure/output/webclient/mapper/**'
				])
			})
	)
}

// ==========================================
// CHECK
// ==========================================

tasks.named('check') {
	dependsOn tasks.named('jacocoTestCoverageVerification')
}